--- a/ParcelDelivery/app/src/main/res/layout/row_userlist.xml
+++ b/ParcelDelivery/app/src/main/res/layout/row_userlist.xml
@@ -23,7 +23,7 @@
         android:layout_toEndOf="@id/textListName" />
     <TextView
         android:id="@+id/textListEmail"
-        android:textColor="@color/colorPrimary"
+        android:textColor="#000000"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/textListName"
@@ -35,7 +35,7 @@
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/textListName"
         android:layout_alignParentRight="true"
-        android:textColor="@color/colorPrimary"
+        android:textColor="#000000"
         android:textSize="14dp" />
 
 
