--- a/ParcelDelivery/app/src/main/res/layout/row_userlist.xml
+++ b/ParcelDelivery/app/src/main/res/layout/row_userlist.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:padding="5dip" >
+
     <TextView
         android:id="@+id/textListName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textStyle="bold"
         android:textColor="@color/colorPrimary"
-        android:textSize="17dp" />
+        android:textSize="17dp"
+        android:textStyle="bold" />
     <TextView
         android:id="@+id/textListSurname"
         android:textColor="@color/colorPrimary"
@@ -33,10 +35,18 @@
         android:id="@+id/textListPosition"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/textListName"
-        android:layout_alignParentRight="true"
+        android:layout_alignBottom="@+id/textListEmail"
+        android:layout_toStartOf="@id/imageViewList"
+        android:layout_marginEnd="10dp"
         android:textColor="#000000"
         android:textSize="14dp" />
+
+    <ImageView
+        android:id="@+id/imageViewList"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_alignParentEnd="true"
+        app:srcCompat="@drawable/avatar0" />
 
 
 </RelativeLayout>
