--- a/ParcelDelivery/app/src/main/res/layout/activity_pack.xml
+++ b/ParcelDelivery/app/src/main/res/layout/activity_pack.xml
@@ -72,4 +72,16 @@
         app:layout_constraintTop_toBottomOf="@+id/textViewSenderAddress"
         app:layout_constraintVertical_bias="0.131" />
 
+    <Button
+        android:id="@+id/buttonRemoveParcel"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="@string/buttonRemoveParcel"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/buttonChangeStatus"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="@+id/buttonChangeStatus"
+        app:layout_constraintTop_toBottomOf="@+id/buttonChangeStatus"
+        app:layout_constraintVertical_bias="0.0" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
