--- a/ParcelDelivery/app/src/main/res/layout/fragment_userdetails0.xml
+++ b/ParcelDelivery/app/src/main/res/layout/fragment_userdetails0.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -79,8 +78,9 @@
         android:layout_marginStart="100dp"
         android:layout_marginTop="83dp"
         android:layout_marginEnd="100dp"
+        app:layout_constraintBottom_toTopOf="@+id/ID_GO_TO_AVATAR"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.491"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ID_UD0_SURNAME"
         app:srcCompat="@android:drawable/btn_dialog" />
@@ -92,8 +92,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:text="ZMIANA ZDJĘCIA"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/ID_CHANGE_PASSWORD"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ID_UD0_AVATAR_VIEW" />
 
@@ -101,8 +102,11 @@
         android:id="@+id/ID_CHANGE_PASSWORD"
         style="@style/buttonGreen"
         android:layout_marginTop="8dp"
+        android:layout_marginBottom="32dp"
         android:text="ZMIANA HASŁA"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ID_GO_TO_AVATAR" />
 
