--- a/ParcelDelivery/app/src/main/res/layout/fragment_userdetails2.xml
+++ b/ParcelDelivery/app/src/main/res/layout/fragment_userdetails2.xml
@@ -7,6 +7,7 @@
 
     <Button
         android:id="@+id/buttonAvailability"
+        style="@style/buttonGreen"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -19,10 +20,12 @@
 
     <Button
         android:id="@+id/buttonSaveSchedule"
+        style="@style/buttonGreen"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         android:text="@string/edit_schedule"
         app:layout_constraintBottom_toTopOf="@+id/buttonAvailability"
         app:layout_constraintEnd_toEndOf="parent"
