--- a/ParcelDelivery/app/src/main/res/layout/fragment_userdetails3.xml
+++ b/ParcelDelivery/app/src/main/res/layout/fragment_userdetails3.xml
@@ -8,9 +8,12 @@
 
     <Button
         android:id="@+id/buttonSalary"
+        style="@style/buttonGreen"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="16dp"
         android:text="@string/edit_rate"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
