--- a/ParcelDelivery/app/src/main/res/layout/activity_parcel_list.xml
+++ b/ParcelDelivery/app/src/main/res/layout/activity_parcel_list.xml
@@ -22,6 +22,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
+    <Button
+        android:id="@+id/buttonLogoutParcel"
+        style="@style/buttonGreen"
+        android:layout_marginStart="115dp"
+        android:layout_marginTop="15dp"
+        android:text="Wyloguj"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/textView7" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/parcel_list_recycler_view"
         android:layout_width="401dp"
