--- a/ParcelDelivery/app/src/main/res/layout/activity_storekeeper.xml
+++ b/ParcelDelivery/app/src/main/res/layout/activity_storekeeper.xml
@@ -9,13 +9,14 @@
     <TextView
         style="@style/headerWhite"
         android:layout_marginStart="110dp"
-        android:layout_marginTop="185dp"
+        android:layout_marginTop="15dp"
         android:layout_marginEnd="110dp"
         android:text="Magazynier"
         android:textColor="@color/colorPrimary"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonLogoutStore" />
+        app:layout_constraintTop_toBottomOf="@+id/ID_MAIN_AVATAR_VIEW" />
 
     <Button
         android:id="@+id/ID_VIEW_STOREHOUSE"
@@ -29,32 +30,31 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <Button
-        android:id="@+id/buttonLogoutStore"
-        style="@style/buttonGreen"
-        android:layout_marginStart="116dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginEnd="116dp"
-        android:text="Wyloguj"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView5" />
-
     <TextView
-        style="@style/headerBackgroundGreen"
         android:id="@+id/textView5"
+        style="@style/headerBackgroundGreen"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/buttonLogoutStore"
+        style="@style/buttonGreen"
+        android:layout_marginStart="115dp"
+        android:layout_marginTop="16dp"
+        android:text="Wyloguj"
+        app:layout_constraintStart_toStartOf="@+id/textView5"
+        app:layout_constraintTop_toTopOf="@+id/textView5" />
 
     <ImageView
         android:id="@+id/ID_MAIN_AVATAR_VIEW"
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_marginStart="100dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="116dp"
         android:layout_marginEnd="100dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.491"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/buttonLogoutStore"
         app:srcCompat="@android:drawable/btn_dialog" />
