--- a/ParcelDelivery/app/src/main/res/layout/activity_avatar.xml
+++ b/ParcelDelivery/app/src/main/res/layout/activity_avatar.xml
@@ -42,6 +42,7 @@
         android:layout_marginStart="100dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="100dp"
+        android:layout_marginBottom="8dp"
         android:text="USUŃ ZDJĘCIE "
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
