--- a/ParcelDelivery/app/src/main/res/layout/fragment_userdetails1.xml
+++ b/ParcelDelivery/app/src/main/res/layout/fragment_userdetails1.xml
@@ -26,7 +26,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="8dp"
         android:text="@string/editdetails"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -58,7 +58,9 @@
         android:hint="@string/stanowisko"
         android:inputType="none"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        app:layout_constraintBottom_toTopOf="@+id/textDetailPesel"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textDetailEmail" />
 
@@ -75,7 +77,9 @@
         android:hint="@string/nr_dowodu"
         android:inputType="text"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        app:layout_constraintBottom_toTopOf="@+id/textDetailAddress"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textDetailPesel" />
 
@@ -92,7 +96,9 @@
         android:hint="@string/adres"
         android:inputType="textPostalAddress"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        app:layout_constraintBottom_toTopOf="@+id/textDetailPostal"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textDetailIdNum" />
 
@@ -109,7 +115,9 @@
         android:hint="@string/email"
         android:inputType="textEmailAddress"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        app:layout_constraintBottom_toTopOf="@+id/textDetailPosition"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textDetailSurname" />
 
@@ -119,6 +127,7 @@
         android:layout_height="32dp"
         android:layout_marginStart="120dp"
         android:layout_marginTop="24dp"
+        android:layout_marginBottom="16dp"
         android:autofillHints=""
         android:background="#F1EEEE"
         android:ems="10"
@@ -126,7 +135,9 @@
         android:hint="@string/kod_pocztowy"
         android:inputType="number"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        app:layout_constraintBottom_toTopOf="@+id/buttonResetPasswd"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textDetailAddress" />
 
@@ -143,7 +154,9 @@
         android:hint="@string/pesel"
         android:inputType="number"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        app:layout_constraintBottom_toTopOf="@+id/textDetailIdNum"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textDetailPosition" />
 
@@ -160,7 +173,9 @@
         android:hint="@string/nazwisko"
         android:inputType="textPersonName"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        app:layout_constraintBottom_toTopOf="@+id/textDetailEmail"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textDetailName" />
 
@@ -179,7 +194,9 @@
         android:hint="@string/imie"
         android:inputType="textPersonName"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        app:layout_constraintBottom_toTopOf="@+id/textDetailSurname"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:visibility="visible" />
@@ -195,6 +212,7 @@
         android:text="@string/imie"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textColor="#000000"
+        app:layout_constraintBottom_toTopOf="@+id/textDetailSurnameText"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -208,6 +226,7 @@
         android:text="@string/nazwisko"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textColor="#000000"
+        app:layout_constraintBottom_toTopOf="@+id/textDetailEmailText"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textDetailNameText" />
 
@@ -221,6 +240,7 @@
         android:text="@string/email"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textColor="#000000"
+        app:layout_constraintBottom_toTopOf="@+id/textDetailPositionText"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textDetailSurnameText" />
 
@@ -234,6 +254,7 @@
         android:text="@string/stanowisko"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textColor="#000000"
+        app:layout_constraintBottom_toTopOf="@+id/textDetailPeselText"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textDetailEmailText" />
 
@@ -247,6 +268,7 @@
         android:text="@string/pesel"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textColor="#000000"
+        app:layout_constraintBottom_toTopOf="@+id/textDetailIdNumText"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textDetailPositionText" />
 
@@ -260,6 +282,7 @@
         android:text="@string/nr_dowodu"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textColor="#000000"
+        app:layout_constraintBottom_toTopOf="@+id/textDetailAddressText"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textDetailPeselText" />
 
@@ -273,6 +296,7 @@
         android:text="@string/adres"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textColor="#000000"
+        app:layout_constraintBottom_toTopOf="@+id/textDetailPostalText"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textDetailIdNumText" />
 
@@ -282,10 +306,12 @@
         android:layout_height="32dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
+        android:layout_marginBottom="16dp"
         android:gravity="center_vertical"
         android:text="@string/kod_pocztowy"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textColor="#000000"
+        app:layout_constraintBottom_toTopOf="@+id/buttonResetPasswd"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textDetailAddressText" />
 
@@ -308,9 +334,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textDetailEmail"
         tools:visibility="gone" />
-
-    
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
