--- a/ParcelDelivery/app/src/main/res/layout/activity_courier.xml
+++ b/ParcelDelivery/app/src/main/res/layout/activity_courier.xml
@@ -40,14 +40,14 @@
     <TextView
         style="@style/headerWhite"
         android:layout_marginStart="155dp"
-        android:layout_marginTop="280dp"
+        android:layout_marginTop="5dp"
         android:layout_marginEnd="155dp"
         android:text="Kurier"
         android:textColor="@color/colorPrimary"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonLogoutCou" />
+        app:layout_constraintTop_toBottomOf="@+id/ID_MAIN_AVATAR_VIEW" />
 
     <ImageView
         android:id="@+id/ID_MAIN_AVATAR_VIEW"
