--- a/ParcelDelivery/app/src/main/res/layout/fragment_userdetails0.xml
+++ b/ParcelDelivery/app/src/main/res/layout/fragment_userdetails0.xml
@@ -16,7 +16,7 @@
         android:fadingEdge="horizontal|vertical|none"
         android:gravity="center|fill_vertical"
         android:hint="@string/imie"
-        android:inputType="textPersonName"
+        android:inputType="none"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         app:layout_constraintBottom_toTopOf="@+id/ID_UD0_SURNAME"
         app:layout_constraintEnd_toEndOf="parent"
@@ -48,7 +48,7 @@
         android:ems="10"
         android:gravity="center|fill_vertical"
         android:hint="@string/nazwisko"
-        android:inputType="textPersonName"
+        android:inputType="none"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         app:layout_constraintBottom_toTopOf="@+id/ID_GO_TO_AVATAR"
         app:layout_constraintEnd_toEndOf="parent"
